attempted to fix sign out box not being aligned with right side of screen.

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -15,7 +15,7 @@ a.nav-link {
 }
 
 #login-dropdown {
-    left: -90px;
+    left: -80px;
     padding-left: 10px;
     padding-right: 10px;
 }
